--- a/delice.html
+++ b/delice.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="public/css/style.css">
+  <link rel="stylesheet" href="public/css/prefixed/style.css">
   <script src="https://kit.fontawesome.com/c9edb6d62a.js" crossorigin="anonymous"></script>
   <title>Menu - Le délice des sens</title>
 </head>
@@ -30,9 +30,9 @@
               <stop offset="0%" style="stop-color:rgb(147,86,220);stop-opacity:1.00" />
               <stop offset="100%" style="stop-color:rgb(255,121,218);stop-opacity:1.00" />
             </linearGradient>
-            <path class="test1"
+            <path class="heart--1"
               d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
-            <path class="test2"
+            <path class="heart--2"
               d="M16,28.261c0,0-14-7.926-14-17.046c0-9.356,13.159-10.399,14-0.454c1.011-9.938,14-8.903,14,0.454C30,20.335,16,28.261,16,28.261z" />
           </svg>
         </div>
@@ -84,7 +84,7 @@
         </div>
         <div class="menu__carte menu__carte--plats">
           <h3>Plats</h3>
-          <div class="menu__plat menu__plat--1">
+          <div class="menu__plat menu__plat--5">
             <div class="menu__desc">
               <div class="menu">
                 <h4>Poulet rôti aux herbes de Provence</h4>
@@ -98,7 +98,7 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu__plat menu__plat--2">
+          <div class="menu__plat menu__plat--6">
             <div class="menu__desc">
               <div class="menu">
                 <h4>Langouste rôtie</h4>
@@ -112,7 +112,7 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu__plat menu__plat--3">
+          <div class="menu__plat menu__plat--7">
             <div class="menu__desc">
               <div class="menu">
                 <h4>Côte de boeuf Angus</h4>
@@ -129,7 +129,7 @@
         </div>
         <div class="menu__carte menu__carte--desserts">
           <h3>Desserts</h3>
-          <div class="menu__plat menu__plat--1">
+          <div class="menu__plat menu__plat--8">
             <div class="menu__desc">
               <div class="menu">
                 <h4>Farandole de desserts</h4>
@@ -143,7 +143,7 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu__plat menu__plat--2">
+          <div class="menu__plat menu__plat--9">
             <div class="menu__desc">
               <div class="menu">
                 <h4>Crème brulée</h4>
@@ -157,7 +157,7 @@
               <i class="fas fa-check-circle"></i>
             </div>
           </div>
-          <div class="menu__plat menu__plat--3">
+          <div class="menu__plat menu__plat--10">
             <div class="menu__desc">
               <div class="menu">
                 <h4>Tiramisu</h4>
